--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
         <ul>
         {% if site.show_downloads %}
-          <li><a href="{{ site.github.zip_url }}">View on<strong>VK</strong></a></li>
+          <li><a href="{{ https://vk.com/swquinc }}">View on<strong>VK</strong></a></li>
           <li><a href="{{ site.github.tar_url }}">View on<strong>Linkedin</strong></a></li>
         {% endif %}
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
