--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         <ul>
         {% if site.show_downloads %}
           <li><a href="{{ https://vk.com/swquinc }}">View on<strong>VK</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">View on<strong>Linkedin</strong></a></li>
+          <li><a href="{{ vk.com/swquinc }}">View on<strong>Linkedin</strong></a></li>
         {% endif %}
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
