--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           <li><a href="{{ "https://vk.com/swquinc/" }}">View on<strong>VK</strong></a></li>
           <li><a href="{{ "https://www.linkedin.com/in/khovalygtaraa/" }}">View on<strong>Linkedin</strong></a></li>
         {% endif %}
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          <li><a href="{{ "https://github.com/KhovalygTaraa" }}">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
